margin and flex wrap fix

--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 100px 0;
+    margin: 60px 0 100px 0;
 }
 
 .profile_info {
@@ -112,6 +112,7 @@
     .profile_info > p {
         font-size: 0.8rem;
         line-height: 1.2rem;
+        margin-top: 40px;
     }
 
     .detailSection li {
